--- a/FilmesApi/Properties/launchSettings.json
+++ b/FilmesApi/Properties/launchSettings.json
@@ -1,12 +1,20 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:23847",
+      "sslPort": 44335
+    }
+  },
   "profiles": {
-    "BaseAPI": {
+    "FilmesApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7297;http://localhost:5041",
+      "applicationUrl": "https://localhost:7106;http://localhost:5106",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
